--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <table cellpadding="20">
         <tr>
-            <td><img src="Profile.png" alt="Aditya's Profile picture" width="200"></td>
+            <td><img src="image/Profile.png" alt="Aditya's Profile picture" width="200"></td>
             <td> <h1>Aditya Raj</h1>
                 <p><em>student at DSCE and enthusiast programmer</em></p>
                 <p>I am currently in my first year of engineering and eagar to learn new technologies and skills.🚀</p></td>
